--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
           </div>
           <div class="row p-2">
             <label class="col-md" for="vars">Iteraciones (n)</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="100">
+            <input class="col-sm-4" style="text-align:right" type="text" id="n" value="100">
           </div>
           <div class="row p-2">
             <label class="col-md" for="vars">Iteraciones finales (0 si no hay final)</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="0">
+            <input class="col-sm-4" style="text-align:right" type="text" id="m" value="0">
           </div>        
           <div class="row p-2">
             <label class="col-md" for="vars">X máxima</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="10">
+            <input class="col-sm-4" style="text-align:right" type="text" id="x-max" value="10">
           </div>
           <div class="row p-2">
             <label class="col-md" for="vars">X minima</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="10">
+            <input class="col-sm-4" style="text-align:right" type="text" id="x-min" value="10">
           </div>
           <div class="row p-2">
             <label class="col-md" for="vars">Y máxima</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="10">
+            <input class="col-sm-4" style="text-align:right" type="text" id="y-max" value="10">
           </div>
           <div class="row p-2">
             <label class="col-md" for="vars">Y minima</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="10">
+            <input class="col-sm-4" style="text-align:right" type="text" id="y-min" value="10">
           </div>
 
         </div>
@@ -69,103 +69,7 @@
         </div>
       </aside>
 
-      <main class="col px-0 flex-grow-1">
-        <div class="container-fluid">
-
-          <div class="p-3">
-
-            <div id="input_data" class="row justify-content-between container p-3">
-
-              <div class="row col-7 p-2">
-                <label class="" for="vars">Variables</label>
-                <input type="text" id="vars" value="x" placeholder="Introduce las variables (separadas por coma)">
-
-              </div>
-
-              <div class="row col-7 p-2">
-                <label for="eq">Introduce la ecuación</label>
-                <input text="text" id="eq" value="x" />
-              </div>
-
-              <div class="justify-content-end mt-3">
-                <input class="btn btn-primary my-3" id="go_button" type="submit" value="Go!" />
-              </div>
-            </div>
-
-          </div>
-
-          <div class="row min-vh-80 flex-column flex-md-row mt-5 container-xl">
-
-            <main class="col px-0 flex-grow-1">
-              <div class="" style="color:red;">grafica_atractor</div>
-            </main>
-
-            <aside class="col-12 col-md-5 col-xl-2  bg-light p-2">
-              
-              <div>
-                Puntos fijos
-              </div>
-              <div class="mt-3">
-                Estabilidad
-              </div>
-              <div class="mt-3">
-                datos de Lyapunov etc
-              </div>
-
-            </aside>
-
-          </div>
-          <!-- <div class="container-fluid">
-            <div class="d-flex justify-content-between container-xxl mt-5 mb-5">
-
-              <div class="container-l">grafica_atractor</div>
-              <div class="container-m">
-                <div>
-                  Puntos fijos
-                </div>
-                <div class="mt-3">
-                  Estabilidad
-                </div>
-              </div>
-
-            </div>
-
-            <div class="d-md-flex justify-content-between container-xxl mt-5 mb-5">
-
-              <div class="container-l">
-                Representación del mapa según la matriz introducida
-              </div>
-
-              <div class="container-m">
-                datos de Lyapunov etc
-              </div>
-
-            </div>
-
-          </div> -->
-        </div>
-
-        <!-- <div class="container-fluid d-lg-flex flex-column justify-content-between">
-
-          <div id="input_data" class="row justify-content-between container p-3">
-
-            <div class="row col-7 p-2">
-              <label for="eq">Introduce la matriz</label>
-              <input text="text" id="eq" value="x" />
-            </div>
-
-            <div class="justify-content-end  mt-3">
-              <input class="btn btn-primary my-3" id="go_button" type="submit" value="Go!" />
-            </div>
-
-          </div>
-
-
-          
-
-        </div> -->
-
-      </main>
+      <main id="content" class="col px-0 flex-grow-1"></main>
     </div>
   </div>
 
