--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/mathjs@8.1.0/lib/browser/math.js"></script>
   <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="main.js" defer></script>
 
 
@@ -60,10 +61,7 @@
           <div class="seccion">
             Parámetros
           </div>
-          <div class="row p-2">
-            <label class="col-md" for="vars">Han de ser generados</label>
-            <input class="col-sm-4" style="text-align:right" type="text" id="vars" value="0">
-          </div>
+
 
 
         </div>
