como esta el asunto

--- a/assets/contenido_basico.html
+++ b/assets/contenido_basico.html
@@ -15,8 +15,8 @@
           <input text="text" id="eq" value="x" />
         </div>
     
-        <div class="justify-content-end mt-3">
-          <input class="btn btn-primary my-3" id="go_button" type="submit" value="Go!" />
+        <div class="col-5 justify-content-end mt-4">
+          <input class="btn btn-primary" id="go_button" type="submit" value="Go!" />
         </div>
       </div>
     
