--- a/index.html
+++ b/index.html
@@ -100,65 +100,21 @@
           </div>
           <div id="parametros" class="row">
             <div class="seccion">Parámetros</div>
+            <div class="row p-2">
+              <label class="col-md" for="vars">X<sub>0</sub></label>
+              <input
+                class="col-sm-4"
+                style="text-align: right"
+                type="text"
+                id="x0"
+                value="10"
+              />
+            </div>
           </div>
         </aside>
 
         <main id="content" class="col px-0 flex-grow-1">
-          <div class="container-fluid">
-            <div class="p-3">
-              <form
-                id="input_data"
-                class="row justify-content-between container p-3"
-              > <!-- onsubmit="grab_variables()" -->
-                <div class="row col-7 p-2">
-                  <label class="" for="vars">Variables</label>
-                  <input
-                    type="text"
-                    id="vars"
-                    value="x,y"
-                    placeholder="Introduce las variables (separadas por coma)"
-                  />
-                </div>
 
-                <div class="row col-7 p-2">
-                  <label for="eq">Introduce la ecuación</label>
-                  <input text="text" id="eq" value="x" />
-                </div>
-
-                <div class="col-5 justify-content-end mt-4">
-                  <input
-                    class="btn btn-primary"
-                    id="go_button"
-                    type="submit"
-                    value="Go!"
-                  />
-                </div>
-              </form>
-            </div>
-
-            <div
-              class="row min-vh-80 flex-column flex-md-row mt-2 container-xl"
-            >
-              <main class="col px-0 flex-grow-1">
-                <label>grafica_atractor</label>
-                <div id="plot" class="flex-grow-1"></div>
-              </main>
-              
-              <script async>
-                document.getElementById("input_data").onsubmit = function (event) {
-                  event.preventDefault();
-                  grab_vars();
-                  draw();
-                };
-              </script>
-
-              <aside class="col-12 col-md-5 col-xl-2 bg-light p-2">
-                <div>Puntos fijos</div>
-                <div class="mt-3">Estabilidad</div>
-                <div class="mt-3">datos de Lyapunov etc</div>
-              </aside>
-            </div>
-          </div>
         </main>
       </div>
     </div>
