haciendo la estabilidad de los puntos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="main.js" defer></script>
-  
+    <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/nerdamer.core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Algebra.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Calculus.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Solve.js"></script>
+    
   </head>
 
   <body onload="init()">
@@ -123,9 +127,7 @@
           </div>
         </aside>
 
-        <main id="content" class="col px-0 flex-grow-1">
-
-        </main>
+        <main id="content" class="col px-0 flex-grow-1"></main>
       </div>
     </div>
   </body>
