--- a/assets/contenido_basico.html
+++ b/assets/contenido_basico.html
@@ -4,6 +4,8 @@
         id="input_data"
         class="row justify-content-between container p-3"
         <div class="row col-7 p-2">
+
+          <!-- Las variables las quitaría -->
           <label class="" for="vars">Variables</label>
           <input
             type="text"
@@ -37,7 +39,10 @@
       </main>
 
           <aside class="col-12 col-md-5 col-xl-2 bg-light p-2">
-            <div>Puntos fijos</div>
+            <div>
+              <label>Punto fijo</label>
+              <label id="fixed_points"></label>
+            </div>
             <div class="mt-3">Estabilidad</div>
             <div class="mt-3">datos de Lyapunov etc</div>
           </aside>
